--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,34 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: #22223B;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* Change the scrollbar track (background) */
+::-webkit-scrollbar {
+  width: 15px; /* Width for vertical scrollbar */
+  height: 12px; /* Height for horizontal scrollbar */
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+/* Change the thumb (scroll handle) */
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.3); /* Semi-transparent white */
+  backdrop-filter: blur(10px); /* Apply the blur for glassmorphism */
+  -webkit-backdrop-filter: blur(10px); /* Safari support */
+  border-radius: 6px; /* Rounded edges for a sleek look */
+  border: 0px solid rgba(255, 255, 255, 0.2); /* Optional border for depth */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Change the scrollbar on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #adabab; /* Darker on hover */
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Change the scrollbar track */
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1); /* Slightly visible track */
+  border-radius: 6px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
